--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -34,4 +34,7 @@ COPY --from=builder /go/bin/frontend /frontend/server
 COPY ./templates ./templates
 COPY ./static ./static
 EXPOSE 8080
-ENTRYPOINT ["/frontend/server"]
+
+ADD https://github.com/ahmetb/runsd/releases/download/v0.0.0-rc.6/runsd /bin/runsd
+RUN chmod +x /bin/runsd
+ENTRYPOINT ["runsd", "-v=5", "--", "/frontend/server"]
