--- a/src/cartservice/Dockerfile
+++ b/src/cartservice/Dockerfile
@@ -40,4 +40,7 @@ RUN apk add --no-cache \
     icu
 WORKDIR /app
 COPY --from=builder /cartservice .
-ENTRYPOINT ["./cartservice", "start"]
+
+ADD https://github.com/ahmetb/runsd/releases/download/v0.0.0-rc.6/runsd /bin/runsd
+RUN chmod +x /bin/runsd
+ENTRYPOINT ["runsd", "-v=5", "--", "/app/cartservice", "start"]
