--- a/src/paymentservice/Dockerfile
+++ b/src/paymentservice/Dockerfile
@@ -43,4 +43,6 @@ COPY . .
 
 EXPOSE 50051
 
-ENTRYPOINT [ "node", "index.js" ]
+ADD https://github.com/ahmetb/runsd/releases/download/v0.0.0-rc.6/runsd /bin/runsd
+RUN chmod +x /bin/runsd
+ENTRYPOINT ["runsd", "-v=5", "--", "node", "index.js" ]
